# task-dashboard

./: .env.development  .env.local  .gitignore  .mcp.json  API_CONTRACT.md  API_CONTRACT_GUIDE.md  AUDIT_REPORT.md  README.md  START_HERE.md  SUPABASE_SETUP.md  api-contract.js  debug-hive.sh  deploy-alpha.sh  dev-connect-dynamic.sh  docker-compose.yml  example-master-plan.md  export-env.sh  master_plan_parser.py  package-lock.json  package.json  simple_backend.py  start_hive_backend.sh  start_services.sh  task-page-design.md  test_api.html  test_import.py  test_import_payload.json  test_master_plan.md
hive-backend-alpha/: .env.example  .gitignore  create_admin.py  create_projects_table.py  create_sample_projects.py  create_schema.sql  create_test_user.py  docker-compose.yml  fix_cors.py  make_tasks_available.py  pyproject.toml  test_api.py
hive-backend-alpha/app/: config.py  dependencies.py  main.py
hive-backend-alpha/app/core/: security.py
hive-backend-alpha/app/models/: __init__.py  base.py  file.py  (+7 more)
hive-backend-alpha/migrations/: env.py
hive-backend-alpha/scripts/: check_admin_password.py  check_tasks.py  check_users.py  delete_all_tasks.py  init_db.py  populate_sample_data.py  run_tests.py
hive-backend-alpha/tests/: conftest.py
hive-backend-alpha/uploads/: 908ca1c1-6434-4a16-86a0-d3832671ceef_293164c2-7e52-4ea8-a1fe-d829f5330ad2_improved_milestones_ui.html  92687b53-da27-410d-9048-dbf10035a74b_293164c2-7e52-4ea8-a1fe-d829f5330ad2_Parallax_40pg_Apr8.txt  92687b53-da27-410d-9048-dbf10035a74b_293164c2-7e52-4ea8-a1fe-d829f5330ad2_hive_skill_assessment2.html
(+150 files in other folders)
